; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_avpacket.c_av_packet_clone.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_avpacket.c_av_packet_clone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @av_packet_clone(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call i32* (...) @av_packet_alloc()
  store i32* %5, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  %9 = load i32*, i32** %4, align 8
  store i32* %9, i32** %2, align 8
  br label %19

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i64 @av_packet_ref(i32* %11, i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = call i32 @av_packet_free(i32** %4)
  br label %17

17:                                               ; preds = %15, %10
  %18 = load i32*, i32** %4, align 8
  store i32* %18, i32** %2, align 8
  br label %19

19:                                               ; preds = %17, %8
  %20 = load i32*, i32** %2, align 8
  ret i32* %20
}

declare dso_local i32* @av_packet_alloc(...) #1

declare dso_local i64 @av_packet_ref(i32*, i32*) #1

declare dso_local i32 @av_packet_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
